@@ -12,7 +12,7 @@ jobs:
         name: "python ${{ matrix.python-version }}"
         strategy:
             matrix:
-                python-version: ['3.10', '3.11', '3.12', '3.13']
+                python-version: ['3.12', '3.13']
         steps:
             - uses: actions/checkout@v4
             - name: Set up python ${{ matrix.python-version }}
@@ -35,11 +35,11 @@ jobs:
               run: |
                 tox
             - name: Test widget decoration output
-              if: ${{ matrix.python-version == '3.11' }}
+              if: ${{ matrix.python-version == '3.13' }}
               run: |
                 tox -e decorations
             - name: Upload generated images
-              if: ${{ always() && matrix.python-version == '3.11' }}
+              if: ${{ always() && matrix.python-version == '3.13' }}
               uses: actions/upload-artifact@v4
               with:
                 name: generated-images
