@@ -7,7 +7,7 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.10"
+    python: "3.12"
   apt_packages:
     - libxkbcommon-dev
     - libpulse-dev
