@@ -1,8 +1,6 @@
 [tox]
 minversion = 1.8
 envlist =
-    py310,
-    py311,
     py312,
     py313,
     packaging
@@ -96,7 +94,5 @@ commands =
 
 [gh-actions]
 python =
-    3.10: py310
-    3.11: py311
     3.12: py312
     3.13: py313, packaging
